--- a/about.qmd
+++ b/about.qmd
@@ -1,5 +1,47 @@
 ---
-title: "About"
+title: "About Me"
+about:
+  id: hero-heading
+  template: solana
+  image: profile.jpg
+  links:
+    - icon: github
+      text: Github
+      href: https://github.com/carinaya
+
 ---
 
-About this site
+
+:::{#hero-heading}
+
+Skilled, creative, and energetic data analyst of 3 years working experience with extensive knowledge in CRM, MMM model, EC analysis and data product design and development. Previously built an audience model with limited historical data in a creative way for Oreo new product to achieve a 20% ROI improvement. The project has received the Data Insight Award by ByteDance and the Golden Award by ROI Festival, Asia largest business creative awards. 
+
+Moreover, co-founded an AI company that helps organizations to optimize their hiring process in terms of quality and efficiency. My team were awarded a total of $50,000 from HKUST and Nanjing government respectively. 
+
+Furthermore, achieved outstanding academic performance at Bentley University, graduating with High Distinction and honored member of Beta Gamma Sigma, and issued an article on International Journal of Social Science and Business as the 1st contributor. 
+
+## Education
+
+University of British Columbia | Vancouver, Canada
+
+##### Master of Data Science | Sep 2023 - present
+
+
+Bentley University | Waltham, USA
+
+##### M.S in Marketing Analytics | Sep 2017 - Jun 2019
+
+
+Communication University of China | Beijing, China
+
+##### B.A in Accounting | Sep 2012 - Jun 2017
+
+## Experience
+
+Publicis Groupe | Associate Manager | Aug 2019 - Oct 2020 & Sep 2021 - Jun 2023
+
+
+EQuantify Technology Co., Ltd | Co-founder | Aug 2020 - Aug 2021
+
+:::
+
