--- a/index.qmd
+++ b/index.qmd
@@ -1,7 +1,10 @@
 ---
-title: "Quarto_website"
+title: "Hello! This is Kun(Carina) Ya. "
+image: profile.jpg
+about:
+  template: jolla
 ---
 
-This is a Quarto website.
+DATA ANALYST | STARTUP | UBC MDS | BENTLEY UNIVERSITY MSMA\n
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+I am a UBC MDS candidate, with 3-year working experiences as data analyst and 1-year with AI starup.
